Custom variables added in an external file

--- a/packages/core/src/common/_variables.scss
+++ b/packages/core/src/common/_variables.scss
@@ -3,6 +3,7 @@
 
 @import "colors";
 @import "mixins";
+@import "customs";
 
 // Namespace appended to the beginning of each CSS class: `.#{$ns}-button`.
 $ns: "bp3" !default;
