--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -22,6 +22,7 @@ Markup:
 .#{$ns}-large - Larger size
 .#{$ns}-small - Smaller size
 .#{$ns}-fill - Fill parent container
+.#{$ns}-action-button - Action button
 
 Styleguide button
 */
