First round of changing the colors

--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -22,6 +22,22 @@ $pt-button-height-small: 24px;
 $pt-button-height-large: 40px;
 
 
+// ------------------------- Colors -----------------------------------
+
+$black: #000000;
+
+$dark-gray1: hsl(228, 7%, 8%);
+$dark-gray2: hsl(228, 7%, 13%);
+$dark-gray3: hsl(225, 13%, 18%);
+$dark-gray4: hsl(225, 14%, 22%);
+$dark-gray5: hsl(225, 14%, 27%);
+
+$blue1: hsl(202, 100%, 25%);
+$blue2: hsl(202, 100%, 35%);
+$blue3: hsl(202, 100%, 45%);
+$blue4: hsl(202, 100%, 50%);
+$blue5: hsl(202, 85%, 61%);
+
 // ------------------------- Components -------------------------------
 
 // Buttons
