--- a/packages/core/src/_overwrites.scss
+++ b/packages/core/src/_overwrites.scss
@@ -3,7 +3,7 @@
 // ------------------------- Components -------------------------------
 
 // Buttons
-.pt-button.pt-action-button {
+.#{$ns}-button.#{$ns}-action-button {
   padding-left: 32px;
   padding-right: 32px;
   text-transform: uppercase;
@@ -14,13 +14,13 @@
 //
 // Every input is a round input for us
 //
-.pt-input {
+.#{$ns}-input {
   border-radius: $pt-input-height;
   box-sizing: border-box;
   padding-left: $input-padding-horizontal;
   padding-right: $input-padding-horizontal;
 
-  &.pt-large {
+  &.#{$ns}-large {
     padding: 0 $input-padding-horizontal * 1.5;
   }
 }
@@ -28,9 +28,9 @@
 
 // Control groups
 
-.pt-control-group {
+.#{$ns}-control-group {
 
-  .pt-input {
+  .#{$ns}-input {
     // inherit radius since it's most likely to be zero
     border-radius: inherit;
 
@@ -38,8 +38,8 @@
       border-radius: initial;
     }
   }
-  .pt-button,
-  .pt-select select {
+  .#{$ns}-button,
+  .#{$ns}-select select {
     // inherit radius since it's most likely to be zero
     border-radius: inherit;
     //border-radius: $pt-button-border-radius
@@ -56,12 +56,12 @@
   }
 
   // bring back border radius on these buttons
-  .pt-input-group .pt-button {
+  .#{$ns}-input-group .#{$ns}-button {
     border-radius: $pt-border-radius;
   }
 
 
-  &.pt-vertical {
+  &.#{$ns}-vertical {
 
     > :first-child {
       margin-top: 0;
@@ -77,6 +77,6 @@
 
 // Tag Input
 
-.pt-input-ghost {
+.#{$ns}-input-ghost {
   font-size: 14px;
 }
