cm better than px

--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -16,7 +16,7 @@ $pt-line-height: ($pt-grid-size * 2.25) / $pt-font-size + 0.0001 !default;
 
 $pt-border-radius: 4px;
 
-$pt-input-height: 32px;
+$pt-input-height: 32cm;
 
 // Buttons
 $pt-button-height: 32px;
