Just add a comment

--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -50,6 +50,8 @@ $button-border-width: 0;
 
 // Inputs
 $input-padding-horizontal: $pt-grid-size * 2;
+
+// Controls
 $switch-indicator-margin: 1px;
 
 //Tags
