--- a/packages/core/src/blueprint.scss
+++ b/packages/core/src/blueprint.scss
@@ -14,4 +14,4 @@ Licensed under the terms of the LICENSE file distributed with this project.
 @import "accessibility";
 
 @import "components/index";
-@import "overwrites";
+@import "overrides";
