Fix multiselect margins for popover

--- a/packages/select/src/components/select/_overrides.scss
+++ b/packages/select/src/components/select/_overrides.scss
@@ -1,6 +1,9 @@
-
 .#{$ns}-popover {
   .#{$ns}-popover-content {
     margin-top: 8px;
   }
+}
+
+.#{$ns}-popover.#{$ns}-multi-select-popover .#{$ns}-popover-content {
+  margin-top: 0;
 }
