Remove unnecessary css importants

--- a/packages/core/src/_overrides.scss
+++ b/packages/core/src/_overrides.scss
@@ -14,8 +14,8 @@
 }
 
 .#{$ns}-button-text {
-  font-size: 12px !important;
-  font-weight: bold !important;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 // Inputs
