Override tag input and popover styles to get desired dropdown result

--- a/packages/core/src/_overrides.scss
+++ b/packages/core/src/_overrides.scss
@@ -87,8 +87,11 @@
 
 // Tag Input
 
-.#{$ns}-input-ghost {
-  font-size: 14px;
+.#{$ns}-tag-input {
+  .#{$ns}-input-ghost {
+    width: 100%;
+    font-size: 14px;
+  }
 }
 
 .#{$ns}-tag-input .#{$ns}-tag {
