--- a/packages/select/src/components/select/_overrides.scss
+++ b/packages/select/src/components/select/_overrides.scss
@@ -10,7 +10,7 @@
 }
 
 .#{$ns}-popover-target {
-  max-width: 100%;
+  width: 100%;
 }
 
 .#{$ns}-popover-wrapper {
@@ -18,9 +18,9 @@
 }
 
 .#{$ns}-multi-select-popover .#{$ns}-menu {
-  max-width: 100%;
+  width: 100%;
 }
 
 .#{$ns}-select-popover .#{$ns}-menu {
-  max-width: 100%;
+  width: 100%;
 }
