Modify dark-link-color for dark theme

--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -42,7 +42,7 @@ $blue4: #00a1ff;
 $blue5: #47b2f0;
 
 $pt-intent-primary: #0091E4;
-
+$pt-dark-link-color: $pt-intent-primary; // for links
 
 
 // ------------------------- Components -------------------------------
