--- a/packages/select/src/components/select/_overrides.scss
+++ b/packages/select/src/components/select/_overrides.scss
@@ -30,6 +30,7 @@
 .#{$ns}-tag-input .#{$ns}-tag-input-values {
   margin-right: 0;
   overflow-y: auto;
+  padding-right: 24px;
 }
 
 .#{$ns}-input.#{$ns}-multi-select {
