--- a/packages/select/src/components/select/_overrides.scss
+++ b/packages/select/src/components/select/_overrides.scss
@@ -28,12 +28,17 @@
 // MultiSelect
 
 .#{$ns}-tag-input .#{$ns}-tag-input-values {
+  margin-top: 0;
   margin-right: 0;
+  height: 100%;
   overflow-y: auto;
+  padding-top: 8px;
   padding-right: 24px;
 }
 
 .#{$ns}-input.#{$ns}-multi-select {
+  position: relative;
+  height: 100%;
   padding-right: 0;
 }
 
@@ -45,4 +50,12 @@
 
 .#{$ns}-tag-input .#{$ns}-tag {
   max-width: calc(100% - 48px);
+}
+
+.#{$ns}-popover-wrapper .#{$ns}-popover-target {
+  height: 100%;
+}
+
+.#{$ns}-popover-target > div {
+  height: 100%;
 }
