Improve the tooltip looking

--- a/packages/core/src/_overrides.scss
+++ b/packages/core/src/_overrides.scss
@@ -110,6 +110,12 @@
   outline: 0;
 }
 
+// Tooltip
+.#{$ns}-tooltip, .#{$ns}-tooltip .#{$ns}-popover-content {
+  border-radius: $pt-grid-size;
+  font-size: 12px;
+}
+
 // Popover
 .#{$ns}-transition-container {
   margin-top: 4px;
