Fix select overrides custom shadow in order to compile without errors

--- a/packages/select/src/components/select/_overrides.scss
+++ b/packages/select/src/components/select/_overrides.scss
@@ -1,3 +1,5 @@
+$custom-shadow: 0 0 12px rgba(#000000, 0.25) !important;
+
 // Popover
 
 .#{$ns}-popover.#{$ns}-multi-select-popover .#{$ns}-popover-content {
