Update Table component styles to fit graphext design

--- a/packages/table/src/table.scss
+++ b/packages/table/src/table.scss
@@ -5,6 +5,7 @@ Licensed under the terms of the LICENSE file distributed with this project.
 
 */
 
+@import "./common/overrides";
 @import "../../core/src/common/mixins";
 @import "./common/loading";
 @import "./common/variables";
