--- a/packages/table/src/common/_variables.scss
+++ b/packages/table/src/common/_variables.scss
@@ -1,6 +1,6 @@
 // Copyright 2016 Palantir Technologies, Inc. All rights reserved.
 
-@import "~@blueprintjs/core/src/common/variables";
+@import "./customs";
 @import "./customs";
 
 // TODO: use Blueprint intents instead of duplicating...
