--- a/packages/table/src/common/_variables.scss
+++ b/packages/table/src/common/_variables.scss
@@ -1,7 +1,7 @@
 // Copyright 2016 Palantir Technologies, Inc. All rights reserved.
 
 @import "./customs";
-@import "./customs";
+@import "~@blueprintjs/core/src/common/variables";
 
 // TODO: use Blueprint intents instead of duplicating...
 $pt-intent-colors: (
