--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -95,6 +95,7 @@ $input-box-shadow: none;
 
 // Controls (switch, radio, checkbox)
 $dark-switch-background-color: $dark-gray2;
+$dark-control-background-color-hover: $dark-gray4;
 
 //Tags
 $tag-height: 20px;
