Fix toast cross icon color and use graphext's one

--- a/packages/core/src/_overrides.scss
+++ b/packages/core/src/_overrides.scss
@@ -128,7 +128,13 @@
 
 // Toast
 .#{$ns}-toast {
-  background-color: $dark-gray5;
+  &.#{$ns}-dark {
+    background-color: $dark-gray5;
+  }
+}
+
+.#{$ns}-toast.#{$ns}-dark .#{$ns}-button:not([class*="bp3-intent-"]) .#{$ns}-icon {
+  color: $white;
 }
 
 // CheckBox
