--- a/packages/datetime/src/_overwrites.scss
+++ b/packages/datetime/src/_overwrites.scss
@@ -82,3 +82,10 @@
   color: $pt-intent-primary;
 }
 
+
+// Numeric Input Control Group
+
+.#{$ns}-numeric-input .#{$ns}-button-group.bp3-vertical > .#{$ns}-button{
+  box-shadow: none !important;
+ 
+}
