--- a/packages/core/src/_overrides.scss
+++ b/packages/core/src/_overrides.scss
@@ -103,6 +103,32 @@
   }
 }
 
+// Editable Text
+.#{$ns}-multiline .#{$ns}-editable-text-content {
+  margin: 0;
+}
+.#{$ns}-dark .#{$ns}-editable-text.#{$ns}-editable-text-editing::before, .#{$ns}-editable-text.#{$ns}-editable-text-editing::before{
+  box-shadow: none;
+}
+.#{$ns}-dark .#{$ns}-editable-text:hover::before{
+  box-shadow: none;
+  background: $dark-gray5;
+}
+
+.#{$ns}-editable-text-editing:not([class*="#{$ns}-multiline"])::before , .#{$ns}-editable-text:not([class*="#{$ns}-multiline"])::before {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.#{$ns}-editable-text-input:not(textarea), .#{$ns}-editable-text-content:not(textarea) {
+  margin: 8px 16px;
+}
+
+
 
 // Tag Input
 
