Dark 2 changed and sort icon added

--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -30,7 +30,7 @@ $black: #000000;
 
 $dark-gray0: #161616;
 $dark-gray1: #1F2024;
-$dark-gray2: #272A33;
+$dark-gray2: #272B33;
 $dark-gray3: #2A2E38;
 $dark-gray4: #313541;
 $dark-gray5: #363B47;
