--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -133,3 +133,6 @@ $dark-tooltip-text-color: $white1;
 $menu-item-border-radius: $pt-border-radius;
 $dark-menu-item-color-hover: $dark-gray5;
 $dark-menu-item-color-active: $dark-gray5 !important; // Important is needed here because the classname "bp3-intent-primary" applied to active menu items.
+
+// Dialog
+$dialog-border-radius: 16px;
