--- a/packages/table/src/common/_customs.scss
+++ b/packages/table/src/common/_customs.scss
@@ -1,7 +1,9 @@
 
-$dark-table-background-color: $dark-gray5;
-$dark-cell-background-color: $dark-gray4;
-$dark-cell-border-color: $dark-gray5;
+$dark-table-background-color: $dark-gray2;
+$dark-cell-background-color: transparent;
+$dark-cell-border-color: $dark-gray3;
 $dark-cell-text-color: $white2;
+$dark-header-background-color: $dark-gray3;
+
 
 $cell-padding-horizontal: 16px;
