--- a/packages/table/src/_overrides.scss
+++ b/packages/table/src/_overrides.scss
@@ -30,7 +30,7 @@
   color:$white4;
 }
 .#{$ns}-table-top-container{
-  padding: 8px 0;
+  padding: 8px 0 4px 0;
 }
 
 .#{$ns}-dark .#{$ns}-table-top-container{
