--- a/packages/table/src/common/_customs.scss
+++ b/packages/table/src/common/_customs.scss
@@ -4,6 +4,7 @@ $dark-cell-background-color: transparent;
 $dark-cell-border-color: $dark-gray3;
 $dark-cell-text-color: $white2;
 $dark-header-background-color: $dark-gray3;
+$dark-header-hover-background-color: $dark-gray3;
 
 
 $cell-padding-horizontal: 16px;
