Change MultiSelect background color (dark) from $dark-gray4 to $dark-gray0

--- a/packages/select/src/components/select/_overrides.scss
+++ b/packages/select/src/components/select/_overrides.scss
@@ -27,6 +27,10 @@ $custom-shadow: 0 0 12px rgba(#000000, 0.25) !important;
   padding-right: 0;
 }
 
+.#{$ns}-dark .#{$ns}-input.#{$ns}-multi-select {
+  background-color: $dark-gray0;
+}
+
 .#{$ns}-multi-select > i {
   position: absolute;
   top: 12px;
