Add -gray6 & change MultiSelect background color (dark) from -gray0 to -gray6

--- a/packages/core/src/common/_customs.scss
+++ b/packages/core/src/common/_customs.scss
@@ -34,6 +34,7 @@ $dark-gray2: #272B33;
 $dark-gray3: #2A2E38;
 $dark-gray4: #313641;
 $dark-gray5: #363B47;
+$dark-gray6: rgba(22, 22, 22, 0.3);
 
 $blue1: #00507f;
 $blue2: #0071b2;
